Cleaning up web components

--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -26,11 +26,9 @@
   			<div class="dropdown-content">
   				<a href="#{externalContext.applicationContextPath}/components/hello-world.xhtml">Hello World</a>
   				<a href="#{externalContext.applicationContextPath}/components/greeting.xhtml">Greeting</a>
-  				<a href="#{externalContext.applicationContextPath}/components/.xhtml">Labeled Input 1. Auflage</a>
-  				
-  				<a href="#{externalContext.applicationContextPath}/components/my-component.xhtml">Web-Component Hello World</a>
-  				<a href="#{externalContext.applicationContextPath}/components/expanding-list-standalone.xhtml">Web-Component Tree</a>
-  				<a href="#{externalContext.applicationContextPath}/components/expanding-list.xhtml">Web-Component Tree</a>
+  				<a href="#{externalContext.applicationContextPath}/components/my-component.xhtml">Hello World mit Web-Component</a>
+  				<a href="#{externalContext.applicationContextPath}/components/expanding-list.xhtml">Baum mit Web-Component</a>
+  				<a href="#{externalContext.applicationContextPath}/components/tree.xhtml">Native Baumkomponente mit Web-Component</a>
   			</div>
   		</li>
 
