--- a/src/main/webapp/components/tree.xhtml
+++ b/src/main/webapp/components/tree.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="main">
 
 		<h:panelGrid>
-			<f:facet name="header">Baumkomponente</f:facet>
+			<f:facet name="header">Baumkomponente mit Web-Component</f:facet>
 			<jsfpraxis:tree value="#{treeController.tree}" />
 		</h:panelGrid>
 		
