--- a/src/main/webapp/components/hello-world-web-component.xhtml
+++ b/src/main/webapp/components/hello-world-web-component.xhtml
@@ -11,11 +11,13 @@
 	
 		<h:panelGrid>
 			<f:facet name="header">Einfache Web-Component</f:facet>
-			<!-- taken from https://css-tricks.com/an-introduction-to-web-components/ -->
-			<my-component />
+			<!-- 
+			<hello-world-web-component></hello-world-web-component>
+			 -->
+			<hello-world-web-component />
 		</h:panelGrid>
 
-		<h:outputScript library="js" name="my-component.js" target="body" />
+		<h:outputScript library="js" name="hello-world-component.js" target="body" />
 		
 	</ui:define>
 
