--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -26,9 +26,9 @@
   			<div class="dropdown-content">
   				<a href="#{externalContext.applicationContextPath}/components/hello-world.xhtml">Hello World</a>
   				<a href="#{externalContext.applicationContextPath}/components/greeting.xhtml">Greeting</a>
-  				<a href="#{externalContext.applicationContextPath}/components/hello-world-web-component.xhtml">Hello World mit Web-Component</a>
-  				<a href="#{externalContext.applicationContextPath}/components/expanding-list.xhtml">Baum mit Web-Component</a>
-  				<a href="#{externalContext.applicationContextPath}/components/tree.xhtml">Native Baumkomponente mit Web-Component</a>
+  				<a href="#{externalContext.applicationContextPath}/components/hello-world-web-component.xhtml">Hello World mit Web-Komponente</a>
+  				<a href="#{externalContext.applicationContextPath}/components/expanding-list.xhtml">Baum mit Web-Komponente</a>
+  				<a href="#{externalContext.applicationContextPath}/components/tree.xhtml">Native Baumkomponente</a>
   			</div>
   		</li>
 
