--- a/src/main/webapp/components/hello-world-web-component.xhtml
+++ b/src/main/webapp/components/hello-world-web-component.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="main">
 	
 		<h:panelGrid>
-			<f:facet name="header">Einfache Web-Component</f:facet>
+			<f:facet name="header">Einfache Web-Komponente</f:facet>
 			<!-- 
 			<hello-world-web-component></hello-world-web-component>
 			 -->
