Introduction to WebSockets

--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -25,7 +25,8 @@
 	  	<li class="dropdown">
   			<a href="#" class="dropbtn">Web-Sockets</a>
   			<div class="dropdown-content">
-  				<a href="#{externalContext.applicationContextPath}/websocket/simple-timer.xhtml">Einfacher Timer</a>
+  				<a href="#{externalContext.applicationContextPath}/websockets/intro.xhtml">Intro</a>
+  				<a href="#{externalContext.applicationContextPath}/websockets/simple-timer.xhtml">Einfacher Timer</a>
   			</div>
   		</li>
 
