--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -27,6 +27,9 @@
   			<div class="dropdown-content">
   				<a href="#{externalContext.applicationContextPath}/websockets/intro.xhtml">Intro</a>
   				<a href="#{externalContext.applicationContextPath}/websockets/simple-timer.xhtml">Einfacher Timer</a>
+  				<a href="#{externalContext.applicationContextPath}/websockets/sink.xhtml">Nachrichten empfangen</a>
+  				<a href="#{externalContext.applicationContextPath}/websockets/send-messages.xhtml">Nachrichten senden</a>
+  				<a href="#{externalContext.applicationContextPath}/websockets/long-running.xhtml">Aufwendige Berechnungen</a>
   			</div>
   		</li>
 
