--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -44,6 +44,14 @@
   			</div>
   		</li>
 
+	  	<li class="dropdown">
+  			<a href="#" class="dropbtn">Resource-Library-Contracts</a>
+  			<div class="dropdown-content">
+  				<a href="#{externalContext.applicationContextPath}/resource-library-contracts/usage.xhtml">Verwendung über Konfiguration</a>
+  				<a href="#{externalContext.applicationContextPath}/resource-library-contracts/usage-view.xhtml">Verwendung mit <code>&lt;f:view&gt;</code></a>
+  			</div>
+  		</li>
+
 	  	<li jsf:id="spa-menu" class="dropdown">
   			<a href="#" class="dropbtn">SPA</a>
   			<div class="dropdown-content">
