stateless views added

--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -63,6 +63,14 @@
   		</li>
 
 	  	<li class="dropdown">
+  			<a href="#" class="dropbtn">Zustände</a>
+  			<div class="dropdown-content">
+  				<a href="#{request.contextPath}/stateless/simplest-case.xhtml">Intro</a>
+  				<a href="#{request.contextPath}/stateless/stateless.xhtml">Stateless</a>
+  			</div>
+  		</li>
+
+	  	<li class="dropdown">
   			<a href="#" class="dropbtn">Print/Web</a>
   			<div class="dropdown-content">
   				<h:commandLink action="#{printOrWebToggle.toggle}" value="Print/Web umschalten (nur für Screen-Shots)" immediate="true" />
