--- a/src/main/webapp/WEB-INF/templates/main.xhtml
+++ b/src/main/webapp/WEB-INF/templates/main.xhtml
@@ -6,7 +6,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<h:head>
-		<title><ui:insert name="title">JavaServer Faces: Weiterführende Themen</ui:insert></title>
+		<title><ui:insert name="title">JavaServer Faces: Spezialthemen</ui:insert></title>
 		<link rel="icon" type="image/png" href="#{resource['icons/jsf-logo-no-text.png']}" />
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
