Faces Flows added

--- a/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -52,6 +52,13 @@
   			</div>
   		</li>
 
+	  	<li class="dropdown">
+  			<a href="#" class="dropbtn">Faces-Flows</a>
+  			<div class="dropdown-content">
+  				<a href="#{externalContext.applicationContextPath}/flows/wizard.xhtml">Wizard</a>
+  			</div>
+  		</li>
+
 	  	<li jsf:id="spa-menu" class="dropdown">
   			<a href="#" class="dropbtn">SPA</a>
   			<div class="dropdown-content">
